# er-skip-splash-screens

./: LICENSE_ASL2  README.md  dev.webm  user.webm
er_skip_splash_screens/: Cargo.toml
er_skip_splash_screens/src/: lib.rs
er_skip_startup_cutscenes/: Cargo.toml
er_skip_startup_cutscenes/src/: lib.rs
